vlib/v/checker/tests/infix_unsigned_and_signed_int_err.out
vlib/v/checker/tests/infix_unsigned_and_signed_int_err.vv:2:14: error: unsigned integer cannot be compared with negative value
    1 | fn main() {
    2 |     if u32(1) < -1 {
      |                 ~~
    3 |         println('unexpected')
    4 |     }
vlib/v/checker/tests/infix_unsigned_and_signed_int_err.vv:6:5: error: unsigned integer cannot be compared with negative value
    4 |     }
    5 |
    6 |     if -1 > u32(1) {
      |        ~~
    7 |         println('unexpected')
    8 |     }
