vlib/v/checker/tests/infix_unsigned_and_signed_int_err.vv
fn main() {
	if u32(1) < -1 {
		println('unexpected')
	}

	if -1 > u32(1) {
		println('unexpected')
	}
}
